# VoicePrint

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: 2026-06-11-clause-restructure-design.md  full-project-reference.md
tests/: conftest.py  test_app.py  test_burstiness_gate.py  test_config.py  test_detect.py  test_memory.py  test_metrics.py  test_paraphrase.py  test_patterns.py  test_perplexity.py  test_perplexity_spikes.py  test_pipeline.py  test_polish.py  test_restructure.py  test_scrub.py  test_service.py  test_similarity.py  test_split_sentences.py
tools/: analyze_banned_words.py
voiceprint/: __init__.py  _text.py  config.py  detect.py  memory.py  metrics.py  paraphrase.py  patterns.py  perplexity.py  pipeline.py  polish.py  restructure.py  scrub.py  service.py  similarity.py  style_scorer.py
voiceprint/static/: style.css
