[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM"]
ignore = ["E501", "N801", "N802", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
